tried to fix map alignment

--- a/app/assets/stylesheets/components/_map.scss
+++ b/app/assets/stylesheets/components/_map.scss
@@ -7,6 +7,7 @@
   height: calc( 100vh );
   position: sticky !important;
   top: 0 !important;
+  right: 0 !important;
 }
 
 #small-map {
